--- a/1SKConnect/Supporting File/GoogleService-Info.plist
+++ b/1SKConnect/Supporting File/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>485295735872-u9i0jt5hut0c48pfig1lkgr9d78li9qn.apps.googleusercontent.com</string>
+	<string>777252078983-fth9i26b1thmurva2hpoul9tpoqug6n2.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.485295735872-u9i0jt5hut0c48pfig1lkgr9d78li9qn</string>
+	<string>com.googleusercontent.apps.777252078983-fth9i26b1thmurva2hpoul9tpoqug6n2</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC7_5oU5nueTpoSZND3FHSRyw3h_48tbQM</string>
+	<string>AIzaSyC0KWO5KhasfvvWXdCaQUccsFw7Gk51GjM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>485295735872</string>
+	<string>777252078983</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.elcom.skConnect</string>
+	<string>com.ngnahtn.SDKTest</string>
 	<key>PROJECT_ID</key>
-	<string>sk-connect-bc380</string>
+	<string>healtio-d51d0</string>
 	<key>STORAGE_BUCKET</key>
-	<string>sk-connect-bc380.appspot.com</string>
+	<string>healtio-d51d0.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:485295735872:ios:c87f65a18e701cfc6b4ba5</string>
+	<string>1:777252078983:ios:3053472398861a09477f22</string>
 </dict>
 </plist>
